# MegaLoad

./: .gitignore  CLAUDE.md  convert-icons.cjs  index.html  latest.json  mod-manifest.json  package-lock.json  package.json  sign_helper.cjs  sign_temp.js  tailwind.config.js
scripts/: audit-biomes.cjs  convert-dump.cjs  wiki-map.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_log.rs  bepinex.rs  bugs.rs  chat.rs  config.rs  github.rs  http.rs  identity.rs  import.rs  launcher.rs  logs.rs  mod.rs  mods.rs  player_data.rs  profiles.rs  security.rs  sync.rs  sync_log.rs  thunderstore.rs  trainer.rs  updater.rs
src-tauri/src/models/: mod.rs
src/components/: CharacterPortrait.tsx  SyncingOverlay.tsx  ToastContainer.tsx
src/components/layout/: AppShell.tsx  IdentityGate.tsx  Sidebar.tsx  (+1 more)
src/data/: valheim-items.ts
src/hooks/: useAutoPlayerSync.ts  useAutoSync.ts  useLiveUpdateChecks.ts
src/lib/: tauri-api.ts  valheimSign.ts
src/pages/: AdminPanel.tsx  Browse.tsx  Cart.tsx  ConfigEditor.tsx  Dashboard.tsx  LogViewer.tsx  MegaBugs.tsx  MegaChat.tsx  MegaList.tsx  MegaListDetail.tsx  Mods.tsx  PlayerData.tsx  Profiles.tsx  Settings.tsx  Trainer.tsx  ValheimData.tsx
src/stores/: appUpdateStore.ts  bugStore.ts  chatStore.ts  identityStore.ts  megaListStore.ts  modStore.ts  playerDataStore.ts  profileStore.ts  settingsStore.ts  syncStore.ts  toastStore.ts  trainerStore.ts  updateStore.ts  valheimDataStore.ts
src/types/: megaList.ts
(+2 files in other folders)
