[package]
name = "megaload"
version = "0.12.3"
description = "MegaLoad - Valheim Mod Manager"
authors = ["Rik"]
edition = "2021"

[lib]
name = "megaload_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
notify = "7"
ureq = "2"
zip = "2"
